# ainojya

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/ainojya/: __init__.py
tests/: __init__.py
tests/unit/: __init__.py
