[tool.poetry]
name = "ainojya"
description = "Nojya loli nano jya!"
version = "0.0.1"
authors = ["KIKUKOU baseballsoul.no3@gmail.com"]
readme = "README.md"
license = "LICENSE"
keywords = ["ai", "chat", "discord", "live2d", "youtube"]
classifiers = ["Programming Language :: Python :: 3.12"]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "*"
langchain-community = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 119
select = ["ALL"]
ignore = ["D200", "D205", "D212", "PLR1711", "SIM108", "TD002", "UP015"]
target-version = "py312"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
addopts = "--cov=ainojya --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ainojya"]
omit = ["tests/*"]
